fixed homepage text on mobile

--- a/foodboard-styles.css
+++ b/foodboard-styles.css
@@ -16,28 +16,38 @@
   }
   .navbar-brand-sm img {
     width: 10%;
+    
   }
-  .homepage-background img {
+  .homepage-background-sm img {
     filter: blur(5px);
     opacity: 0.7;
     width: 100%;
+    height: 400px;
+  }
+  #background-lg {
+    display: none;
+  }
+  .home-background img{
+    display:none;
   }
 
   .col-lg-12 {
     display:none;
   }
-  #homepage-body {
-    font-size: 16pt;
-    color: white;
-    z-index: 1;
-    transform:translate(0%,-100%);
-    font-family: 'Railway';
-  }
+
   #homepage-body img {
     width: 50%;
     margin: 0 auto;
   }
 
+  #homepage-body {
+    font-size: 16pt;
+    color: white;
+    z-index: 1;
+    transform:translate(0%, -175%);
+    font-family: 'Railway';
+  }
+  
 }
 
 @media screen and (min-width: 481px) {
@@ -58,13 +68,14 @@
   }
 
   
-  #homepage-body {
-    font-size: 34pt;
-    color: white;
-    z-index: 1;
-    transform:translate(0%,-250%);
-    font-family: 'Railway';
-  }
+#homepage-body {
+  font-size: 26pt;
+  color: white;
+  z-index: 1;
+  transform:translate(0%,-200%);
+  font-family:"HelveticaNeue-Light, Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-style: italic;
+}
   #homepage-body img {
     margin: 0 auto;
     height: 50%;
@@ -196,14 +207,6 @@ body {
   padding: 0%;
 }
 
-#homepage-body {
-  font-size: 26pt;
-  color: white;
-  z-index: 1;
-  transform:translate(0%,-200%);
-  font-family:"HelveticaNeue-Light, Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-style: italic;
-}
 
 
 .homepage-background {
